--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,7 @@
 {
   "BACK_BUTTON_TEXT": "Back",
+  "SEND": "Send",
+  "CANCEL": "Cancel",
 
   "NAME": "Name",
   "EMAIL": "Email",
@@ -31,5 +33,7 @@
 
   "GUESTS_TITLE": "Guests",
   "VOLUNTEERS_TITLE": "Volunteers",
-  "SUPPLIES_TITLE": "Supplies"
+  "SUPPLIES_TITLE": "Supplies Request",
+
+  "REQUESTING": "Requesting"
 }
