added guests and shift list

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -31,5 +31,7 @@
 
   "GUESTS_TITLE": "Guests",
   "VOLUNTEERS_TITLE": "Volunteers",
-  "SUPPLIES_TITLE": "Supplies"
+  "SUPPLIES_TITLE": "Supplies",
+
+  "SITE_MANAGER_HOME_TITLE": "Home"
 }
