added site lead home

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,6 +44,7 @@
   "SUPPLY_REQUESTS": "Supply Requests",
   "WHEELCHAIR_ACCESS": "Wheelchair Access",
   "MAX": "Max",
+  "MY_SITES": "My Active Sites",
   "CURRENT": "Current",
   "GUEST_COUNT": "Guest Count",
   "PET_COUNT": "Pet Count",
