--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,6 +41,7 @@
   "SUPPLIES_TITLE": "Supplies Request",
   "ACTIVE_SITES":  "Active Sites",
   "NOTIFICATIONS": "Notifications",
+  "SUPPLY_REQUEST": "Supply Request",
   "SUPPLY_REQUESTS": "Supply Requests",
   "WHEELCHAIR_ACCESS": "Wheelchair Access",
   "MAX": "Max",
@@ -50,5 +51,7 @@
   "PET_COUNT": "Pet Count",
   "WALK_INS": "Walk-Ins",
   "CHILD_SITE": "Child Site",
-  "QTY": "qty"
+  "QTY": "qty",
+  "LOCATION": "Location",
+  "SUPPLY_ALL": "Supply All"
 }
