--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
   "SITE_MANAGER_HOME_TITLE": "Home",
 
   "SUPPLIES_TITLE": "Request Supplies",
+  "SHIFTS": "Shifts",
   "ACTIVE_SITES":  "Active Sites",
   "NOTIFICATIONS": "Notifications",
   "SUPPLY_REQUEST": "Supply Request",
